<resources>
    <string name="app_name">Self chat</string>
    <string name="action_settings">Settings</string>
    <string name="location">Геолокация</string>
    <string name="photo">Фото альбом</string>
    <string name="camera">Камера</string>
    <string name="message">Сообщение</string>
    <string name="message_hint">Введите текст сообщения</string>
    <string name="temp_time">10:20:25</string>
    <string name="select_img">Галерея</string>
    <string name="temp_msg">New Text\ntext</string>
    <string name="loading">Загрузка…</string>
    <string name="enter_server">Адрес сервера</string>
    <string name="cant_connect">Cервер недоступен</string>
    <string name="timeout">Долгое время ответа. Возможо у Вас плохое качество связи</string>
    <string name="storage_error">Ошибка хранилища</string>
    <string name="no_internet">Проверьте сетевое подключение</string>
    <string name="something_wrong">Упс! что-то пошло не так</string>
    <string name="action_cancelled">Действие отменено</string>
</resources>
