<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/material_design_android_floating_action_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@color/fab_menu_fill_color"
        fab:menu_buttonSpacing="0dp"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/add"
        fab:menu_labels_colorNormal="@android:color/transparent"
        fab:menu_labels_colorPressed="@android:color/transparent"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="false"
        fab:menu_labels_singleLine="true"
        fab:menu_labels_textColor="@color/fab_menu_text_color"
        fab:menu_labels_textSize="@dimen/fab_menu_text_size"
        fab:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/geo"
            fab:fab_label="@string/location"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/album"
            fab:fab_label="@string/photo"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera"
            fab:fab_label="@string/camera"
            fab:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/text"
            fab:backgroundTint="@android:color/transparent"
            fab:fab_label="@string/message"
            fab:fab_size="normal" />
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>